<resources>
    <string name="app_name">MuhammadFahmi_00000042206_IF570_EL_UTS</string>
    <string name="hyperlink"><a href="https://youtu.be/9-cp_lU9gyM">https://youtu.be/9-cp_lU9gyM</a></string>
    <string name="hyperlink2"><a href="https://youtu.be/18VcnYN5_LM">https://youtu.be/18VcnYN5_LM</a></string>
    <string name="hyperlink3"><a href="https://youtu.be/xgpLYwEmlO0">https://youtu.be/xgpLYwEmlO0</a></string>
    <string name="hyperlink4"><a href="https://youtu.be/3-lQy24Xjtk">https://youtu.be/3-lQy24Xjtk</a></string>
    <string name="hyperlink5"><a href="https://youtu.be/jihLJ0oVmGo">https://youtu.be/jihLJ0oVmGo</a></string>
    <string name="hyperlink6"><a href="https://youtu.be/C_Ka7cKwXW0">https://youtu.be/C_Ka7cKwXW0</a></string>
</resources>